# cse576_project3

./: .gitignore  README.md
eigenfaces/: CMakeLists.txt  Makefile  script.bat
eigenfaces/code/: Makefile  eigfaces.cpp  eigfaces.h  face.cpp  face.h  faces.cpp  image.cpp  image.h  main.cpp
faces/: test.tga
faces/group/: group01.tga  group02.tga  group03.tga  group04.tga  group05.tga  group06.tga  group07.tga  group08.tga  group09.tga  group10.tga  group11.tga  group12.tga  group13.tga  group14.tga  group15.tga  group16.tga  group17.tga
faces/interesting/: 01.tga  02.tga  03.tga  04.tga  05.tga  06.tga  07.tga  08.tga  09.tga  10.tga  11.tga  12.tga  13.tga  14.tga  15.tga  16.tga  17.tga  18.tga  19.tga  20.tga  21.tga  22.tga  23.tga  24.tga
faces/neutral/: 01.tga  02.tga  03.tga  04.tga  05.tga  06.tga  07.tga  08.tga  09.tga  10.tga  11.tga  12.tga  13.tga  14.tga  15.tga  16.tga  17.tga  18.tga  19.tga  20.tga  21.tga  22.tga  23.tga  24.tga  list.txt
